reduced overall min-width to 350px to fix horizontal scroll on smaller phones

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@ html,
 body {
   height: 100%;
   width: 100%;
-  min-width: 375px;
+  min-width: 350px;
   min-height: 600px;
 }
 
